feat: ajuste auth user